--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Microsoft Teams Framework for Node.js and browser.",
   "main": "dist/index.node.cjs.js",
   "browser": "dist/index.esm2017.js",
@@ -50,6 +50,7 @@
     "@azure/msal-browser": "^2.21.0",
     "@azure/msal-node": "~1.1.0",
     "@microsoft/microsoft-graph-client": "^3.0.1",
+    "@microsoft/adaptivecards-tools": "^0.1.3",
     "axios": "^0.24.0",
     "botbuilder": ">=4.15.0 <5.0.0",
     "botbuilder-dialogs": ">=4.15.0 <5.0.0",
