--- a/templates/bot/ts/command-and-response/package.json
+++ b/templates/bot/ts/command-and-response/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@microsoft/adaptivecards-tools": "^0.1.3",
+    "@microsoft/teamsfx": "0.6.1-conversation.0",
     "botbuilder": "~4.15.0",
     "botbuilder-azure-blobs": "^4.15.0",
     "botbuilder-dialogs": "~4.15.0",
