--- a/templates/bot/ts/notification-function-base/package.json
+++ b/templates/bot/ts/notification-function-base/package.json
@@ -22,21 +22,16 @@
   "dependencies": {
     "@microsoft/adaptivecards-tools": "^0.1.3",
     "@microsoft/teamsfx": "0.6.1-test-conversation.0",
-    "botbuilder": "~4.15.0",
-    "botbuilder-azure-blobs": "^4.15.0",
-    "botbuilder-dialogs": "~4.15.0",
-    "fs-extra": "^10.0.0"
+    "botbuilder": "~4.15.0"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
     "@types/chai": "^4.3.0",
-    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.0",
     "azurite": "^3.16.0",
     "chai": "^4.3.6",
     "env-cmd": "^10.1.0",
     "mocha": "^9.2.0",
-    "nodemon": "^2.0.7",
     "ts-node": "~9.1.1",
     "typescript": "~3.9.2"
   }
