--- a/templates/bot/ts/notification/package.json
+++ b/templates/bot/ts/notification/package.json
@@ -19,25 +19,18 @@
   },
   "dependencies": {
     "@microsoft/adaptivecards-tools": "^0.1.3",
+    "@microsoft/teamsfx": "0.6.1-test-conversation.0",
     "botbuilder": "~4.15.0",
-    "botbuilder-azure-blobs": "^4.15.0",
-    "botbuilder-dialogs": "~4.15.0",
-    "fs-extra": "^10.0.0",
-    "isomorphic-fetch": "^3.0.0",
-    "node-cron": "^3.0.0",
     "restify": "^8.5.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
-    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.0",
-    "@types/node-cron": "^3.0.1",
     "@types/restify": "8.4.2",
     "chai": "^4.3.6",
     "env-cmd": "^10.1.0",
     "mocha": "^9.2.0",
     "nodemon": "^2.0.7",
-    "shx": "^0.3.3",
     "ts-node": "~9.1.1",
     "typescript": "~3.9.2"
   }
