--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -877,6 +877,11 @@
             "type": "boolean",
             "description": "Support to initialize a TeamsFx application. (requires reload of VS Code)",
             "default": false
+          },
+          "fx-extension.enableNotification / CommandAndResponseBot": {
+            "type": "boolean",
+            "description": "Enable notification bot and command and response bot. (requires reload of VS Code)",
+            "default": false
           }
         }
       }
