--- a/templates/package.json
+++ b/templates/package.json
@@ -17,6 +17,7 @@
         "bot/ts/notification-function-base",
         "bot/ts/notification-trigger-http",
         "bot/ts/notification-trigger-timer",
+        "bot/ts/command-and-response",
         "function-base/js/default",
         "function-base/ts/default",
         "function-triggers/js/HTTPTrigger",
