--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -926,6 +926,14 @@
             }
           },
           {
+            "id": "teamsToolkitCreateFreeAccount",
+            "title": "Create a M365 testing tenant for free",
+            "description": "Create a free M365 testing tenant to install and preview your Teams apps in Teams.\n If you already have an M365 organizational account, sign in to M365 and validate sideloading is enabled.",
+            "media": {
+              "markdown": "media/itp/itp.md"
+            }
+          },
+          {
             "id": "teamsToolkitPreview",
             "title": "Preview your Teams app locally",
             "description": "Press [F5](command:fx-extension.selectAndDebug?%5B%22WalkThrough%22%5D) or discover '[Run and Debug](command:workbench.view.debug)' panel on the activity bar, and click the play icon to locally preview your app in Teams context.\n[Run local preview (F5)](command:fx-extension.selectAndDebug?%5B%22WalkThrough%22%5D)\n__Tip: To run local preview, sign in to M365 (organizational account) with sideloading option.__",
