--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -865,6 +865,30 @@
         }
       },
       {
+        "title": "SPFx Prerequisite Check",
+        "order": 2,
+        "properties": {
+          "fx-extension.spfxPrerequisiteCheck": {
+            "type": "object",
+            "properties": {
+              "yo": {
+                "type": "boolean",
+                "description": "Ensure Yeoman CLI is installed. (requires reload of VS Code)"
+              },
+              "sharepointYeomanGenerator": {
+                "type": "boolean",
+                "description": "Ensure Sharepoint Yeoman generator is installed. (requires reload of VS Code)"
+              }
+            },
+            "additionalProperties": false,
+            "default": {
+              "yo": true,
+              "sharepointYeomanGenerator": true
+            }
+          }
+        }
+      },
+      {
         "title": "Experimental Features",
         "order": 3,
         "properties": {
