--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/api-connector.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/api-connector.template
@@ -4,20 +4,20 @@ import { TeamsFx, createApiClient } from "@microsoft/teamsfx";
 
 const teamsFx = new TeamsFx();
 
-// Initializes a new axios instance to call kudos API
+// Initializes a new axios instance to call {{config.APIName}} API
 
-const kudosClient = createApiClient(teamsFx.getConfig["API_KUDOS_ENDPOINT"], {
-  UserName: teamsFx.getConfig["API_KUDOS_USERNAME"],
-  Password: teamsFx.getConfig["API_KUDOS_PASSWORD"],
+const {{config.APIName}}Client = createApiClient(teamsFx.getConfig["API_{{capitalName}}_ENDPOINT"], {
+  UserName: teamsFx.getConfig["API_{{capitalName}}_USERNAME"],
+  Password: teamsFx.getConfig["API_{{capitalName}}_PASSWORD"],
 });
 
 /* 
 
-You can now call kudos APIs without worrying about authentication. 
+You can now call {{config.APIName}} APIs without worrying about authentication. 
 
 Here is an example for a GET request to "relative_path_of_target_api": 
 
-const result = await kudosClient.get("relative_path_of_target_api"); 
+const result = await {{config.APIName}}Client.get("relative_path_of_target_api"); 
 
  
 
@@ -33,11 +33,11 @@ We have already set the configuration to .env.teamsfx.local based on your answer
 
 Before you deploy your code to cloud using TeamsFx, please follow https://aka.ms/teamsfx-add-appsettings to add following app settings with appropriate value to your Azure environment: 
 
-API_KUDOS_ENDPOINT 
+API_{{capitalName}}_ENDPOINT 
 
-API_KUDOS_USERNAME 
+API_{{capitalName}}_USERNAME 
 
-API_KUDOS_PASSWORD 
+API_{{capitalName}}_PASSWORD 
 
  
 
