--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "0.12.1-rc-hotfix.1",
+  "version": "0.12.1",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -105,8 +105,8 @@
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.1.1",
-    "@microsoft/teamsfx-api": "^0.17.1-rc-hotfix.0",
-    "@microsoft/teamsfx-core": "^1.6.1-rc-hotfix.1",
+    "@microsoft/teamsfx-api": "^0.17.1",
+    "@microsoft/teamsfx-core": "^1.6.1",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
