--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -37,6 +37,7 @@ jobs:
           VAR=$(git diff --cached --name-only)
           if [ ! -z "$VAR" ]
           then
+            echo $VAR
             echo '======================================= Prompt Information ==============================================='
             echo 'There found several moderate severity vulnerabilities in this repo, please check in the package or lock file to repo with: '
             echo 'npx lerna-audit'
@@ -84,6 +85,7 @@ jobs:
           VAR=$(git diff --cached --name-only)
           if [ ! -z "$VAR" ]
           then 
+            echo $VAR
             echo '======================================= Prompt Information ==============================================='
             echo 'There may be some unformatted files in your PR, please run these commands on Git Bash terminal: '
             echo '1. npm run setup'
