--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,6 +57,7 @@
     "@types/mocha": "^8.0.4",
     "@types/mochawesome": "^6.2.1",
     "@types/mock-fs": "^4.13.1",
+    "@types/mustache": "^4.1.2",
     "@types/node": "^14.14.21",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
@@ -83,6 +84,7 @@
     "mochawesome": "^7.0.1",
     "mock-fs": "^5.1.2",
     "mocked-env": "^1.3.5",
+    "mustache": "^4.2.0",
     "nyc": "^15.1.0",
     "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
