chore: rename notification template to notification-restify

--- a/templates/package.json
+++ b/templates/package.json
@@ -13,8 +13,8 @@
         "bot/csharp/default",
         "bot/js/default",
         "bot/ts/default",
-        "bot/ts/notification",
         "bot/ts/notification-function-base",
+        "bot/ts/notification-restify",
         "bot/ts/notification-trigger-http",
         "bot/ts/notification-trigger-timer",
         "bot/ts/command-and-response",
