--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/api-connector.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/api-connector.template
@@ -1,12 +1,12 @@
-const teamsfxSdk = require("@microsoft/teamsfx");
+import { TeamsFx, createApiClient, BasicAuthProvider } from "@microsoft/teamsfx";
 
 // Loads current app's configuration
 
-const teamsFx = new teamsfxSdk.TeamsFx();
+const teamsFx = new TeamsFx();
 
 // Initializes a new axios instance to call {{config.APIName}} API
-const authProvider = new teamsfxSdk.BasicAuthProvider(teamsFx.getConfig("API_{{capitalName}}_USERNAME"), teamsFx.getConfig("API_{{capitalName}}_PASSWORD"));
-const {{config.APIName}}Client = teamsfxSdk.createApiClient(teamsFx.getConfig["API_{{capitalName}}_ENDPOINT"], authProvider);
+const authProvider = new BasicAuthProvider(teamsFx.getConfig("API_{{capitalName}}_USERNAME"), teamsFx.getConfig("API_{{capitalName}}_PASSWORD"));
+const {{config.APIName}}Client = createApiClient(teamsFx.getConfig["API_{{capitalName}}_ENDPOINT"], authProvider);
 
 /* 
 
