--- a/templates/bot/js/notification-function-base/package.json
+++ b/templates/bot/js/notification-function-base/package.json
@@ -6,12 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
-    "dev": "func start --typescript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
+    "dev": "func start --javascript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
     "prepare-storage:teamsfx": "azurite --silent --location ./_storage_emulator --debug ./_storage_emulator/debug.log",
-    "watch:teamsfx": "tsc --watch",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "prestart": "npm run build",
     "start": "npx func start"
   },
   "repository": {
@@ -24,14 +20,7 @@
     "botbuilder": "~4.15.0"
   },
   "devDependencies": {
-    "@azure/functions": "^1.2.3",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
     "azurite": "^3.16.0",
-    "chai": "^4.3.6",
-    "env-cmd": "^10.1.0",
-    "mocha": "^9.2.0",
-    "ts-node": "~9.1.1",
-    "typescript": "~3.9.2"
+    "env-cmd": "^10.1.0"
   }
 }
