chore(init): skip to sync flag for teamsfx init (#4443)

--- a/templates/bot/ts/notification-function-base/.funcignore
+++ b/templates/bot/ts/notification-function-base/.funcignore
@@ -6,3 +6,8 @@ local.settings.json
 test
 tsconfig.json
 .teamsfx.bot.json
+.development
+.DS_Store
+node_modules/.bin
+_storage_emulator
+.notification.localstore.json
