--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -167,6 +167,11 @@
         {
           "command": "fx-extension.openAccountLink",
           "when": "view == teamsfx-accounts",
+          "group": "navigation@2"
+        },
+        {
+          "command": "fx-extension.createAccount",
+          "when": "view == teamsfx-accounts",
           "group": "navigation@1"
         },
         {
@@ -521,6 +526,11 @@
         "enablement": "never"
       },
       {
+        "command": "fx-extension.validate-itp-prerequisites",
+        "title": "Teams - Validate ITP Prerequisites",
+        "enablement": "never"
+      },
+      {
         "command": "fx-extension.get-func-path",
         "title": "Teams - Get Func Path for Environment Variable",
         "enablement": "never"
@@ -620,6 +630,11 @@
         "command": "fx-extension.openAccountLink",
         "title": "%teamstoolkit.commands.accountsLink.title%",
         "icon": "$(info)"
+      },
+      {
+        "command": "fx-extension.createAccount",
+        "title": "%teamstoolkit.commands.createAccount.title%",
+        "icon": "$(add)"
       },
       {
         "command": "fx-extension.openEnvLink",
@@ -928,7 +943,7 @@
           {
             "id": "teamsToolkitCreateFreeAccount",
             "title": "Create a M365 testing tenant for free",
-            "description": "Create a free M365 testing tenant to install and preview your Teams apps in Teams.\n If you already have an M365 organizational account, [sign in to M365](command:fx-extension.signinM365?%5B%22WalkThrough%22%5D) and [validate](command:fx-extension.validate-getStarted-prerequisites?%5B%22WalkThrough%22%5D) sideloading is enabled.",
+            "description": "Create a free M365 testing tenant to install and preview your Teams apps in Teams.\n If you already have an M365 organizational account, [sign in to M365](command:fx-extension.signinM365?%5B%22WalkThrough%22%5D) and validate [sideloading](https://docs.microsoft.com/en-us/microsoftteams/platform/concepts/build-and-test/prepare-your-o365-tenant#enable-custom-teams-apps-and-turn-on-custom-app-uploading) is enabled.\n[Create a M365 testing tenant](https://developer.microsoft.com/en-us/microsoft-365/dev-program)",
             "media": {
               "markdown": "media/itp/itp.md"
             }
