fix(vscode): branding typo

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -910,7 +910,7 @@
     "walkthroughs": [
       {
         "id": "teamsToolkitQuickStart",
-        "title": "Get started with Teams toolkit",
+        "title": "Get started with Teams Toolkit",
         "description": "Jumpstart your Teams app development experience",
         "steps": [
           {
