chore(apicon): export client

--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/api-connector.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/api-connector.template
@@ -8,6 +8,7 @@ const authProvider = new BasicAuthProvider(
   teamsFx.getConfig("API_{{capitalName}}_PASSWORD")
 );
 const {{config.APIName}}Client = createApiClient(teamsFx.getConfig("API_{{capitalName}}_ENDPOINT"), authProvider);
+export { {{config.APIName}}Client };
 
 /* 
 You can now call {{config.APIName}} APIs without worrying about authentication. 
