--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -888,6 +888,11 @@
             "type": "boolean",
             "description": "Unify the configs/templates for local/remote environments. (requires reload of VS Code)",
             "default": false
+          },
+          "fx-extension.enableNotification / CommandAndResponseBot": {
+            "type": "boolean",
+            "description": "Enable notification bot and command and response bot. (requires reload of VS Code)",
+            "default": false
           }
         }
       }
