--- a/templates/bot/js/notification-restify/package.json
+++ b/templates/bot/js/notification-restify/package.json
@@ -4,13 +4,12 @@
   "description": "Microsoft Teams Toolkit Notification Bot Sample (Restify)",
   "author": "Microsoft",
   "license": "MIT",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
-    "dev": "nodemon -e ts --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
-    "build": "tsc --build",
-    "start": "node ./lib/src/index.js",
-    "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
+    "dev": "nodemon --inspect=9239 --signal SIGINT ./src/index.js",
+    "start": "node ./src/index.js",
+    "watch": "nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,10 +22,7 @@
     "restify": "^8.5.1"
   },
   "devDependencies": {
-    "@types/restify": "8.4.2",
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.7",
-    "ts-node": "~9.1.1",
-    "typescript": "~3.9.2"
+    "nodemon": "^2.0.7"
   }
 }
