--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -43,8 +43,8 @@
 /packages/api/src/schemas @dooriya @qinezh @a1exwang @kimizhu
 
 /packages/sdk @tecton @blackchoey @SLdragon @dilin-MS @wenytang-ms
-/packages/sdk/src/conversation @kimizhu @swatDong @a1exwang @XiaofuHuang
-/packages/sdk/test/unit/node/conversation @kimizhu @swatDong @a1exwang @XiaofuHuang
+/packages/sdk/src/conversation @kimizhu @swatDong @a1exwang @XiaofuHuang @dooriya
+/packages/sdk/test/unit/node/conversation @kimizhu @swatDong @a1exwang @XiaofuHuang @dooriya
 
 /packages/fx-core/src/core @jayzhang @LongOddCode @1yefuwang1 @nliu-ms
 /packages/fx-core/src/core/middleware/projectMigrator.ts @dooriya @qinezh @a1exwang @meifans @blackchoey @wenytang-ms
