chore(m365): add m365 app vsc setting (#4475)

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -903,6 +903,11 @@
             "type": "boolean",
             "description": "Enable notification bot and command and response bot. (requires reload of VS Code)",
             "default": false
+          },
+          "fx-extension.enableM365App": {
+            "type": "boolean",
+            "title": "Enable Microsoft 365 App",
+            "description": "Enable to create a new Microsoft 365 app. (requires reload of VS Code)"
           }
         }
       }
