chore: add readme to notification

--- a/templates/bot/js/notification-function-base/.funcignore
+++ b/templates/bot/js/notification-function-base/.funcignore
@@ -1,15 +1,14 @@
-*.js.map
-*.ts
-.git*
-.vscode
-local.settings.json
-test
-tsconfig.json
-.teamsfx.bot.json
 .development
 .DS_Store
+.git*
+.notification.localstore.json
+.vscode
+*.js.map
+*.ts
+_storage_emulator
+local.settings.json
 node_modules/.bin
 node_modules/azure-functions-core-tools
 node_modules/azurite
-_storage_emulator
-.notification.localstore.json
+README.md
+tsconfig.json
