--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -101,6 +101,7 @@
     "reflect-metadata": "^0.1.13",
     "semver": "^7.3.4",
     "tedious": "^14.3.0",
+    "toposort": "^2.0.2",
     "tslib": "^2.1.0",
     "typedi": "^0.10.0",
     "url-parse": "^1.5.9",
@@ -142,6 +143,7 @@
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
     "@types/tmp": "^0.2.0",
+    "@types/toposort": "^2.0.3",
     "@types/url-parse": "^1.4.3",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.1",
