--- a/.github/workflows/sdk-e2e-test.yml
+++ b/.github/workflows/sdk-e2e-test.yml
@@ -43,12 +43,6 @@ jobs:
         run: |
           npm run test:e2e:node
 
-      - name: run test - browser
-        if: ${{ always() }}
-        working-directory: packages/sdk
-        run: |
-          npm run test:e2e:browser
-
       - name: List jobs
         if: ${{ always() }}
         id: list-jobs
@@ -57,21 +51,24 @@ jobs:
           lists=""
 
           total_node=`cat test-results.node.xml | xq '.testsuite| ."@tests"' | sed -e 's/"//g'`
-          total_browser=`cat test-results.browser.xml | xq '.testsuite| ."@tests"' | sed -e 's/"//g'`
-          total=$((total_node+total_browser))
+          #total_browser=`cat test-results.browser.xml | xq '.testsuite| ."@tests"' | sed -e 's/"//g'`
+          #total=$((total_node+total_browser))
+          total=total_node
 
           error_node=`cat test-results.node.xml | xq '.testsuite| ."@errors"' | sed -e 's/"//g'`
-          error_browser=`cat test-results.browser.xml | xq '.testsuite| ."@errors"' | sed -e 's/"//g'`
-          failed=$((error_node+error_browser))
+          #error_browser=`cat test-results.browser.xml | xq '.testsuite| ."@errors"' | sed -e 's/"//g'`
+          #failed=$((error_node+error_browser))
+          failed=error_node
 
           passed=$((total-failed))
 
           emails="haolong@microsoft.com"
 
           case_node=`cat test-results.node.xml | xq '.testsuite | .testcase'`
-          case_browser=`cat test-results.browser.xml | xq '.testsuite | .testcase'`
+          #case_browser=`cat test-results.browser.xml | xq '.testsuite | .testcase'`
 
-          for case in $(jq --slurp 'add' <(echo "$case_node ") <(echo "$case_browser") | jq -r '.[] | @base64'); do
+          #for case in $(jq --slurp 'add' <(echo "$case_node ") <(echo "$case_browser") | jq -r '.[] | @base64'); do
+          for case in $(echo "$case_node" | jq -r '.[] | @base64'); do
             _jq() {
                 echo "${case}" | base64 --decode | jq -r "${1}"
             }
