--- a/.github/workflows/sdk-e2e-test.yml
+++ b/.github/workflows/sdk-e2e-test.yml
@@ -96,7 +96,7 @@ jobs:
               emails="$emails;$email"
             fi
 
-            row="<tr> <td style=\\\"text-align: left;\\\">$suite</td> <td style=\\\"text-align: left;\\\">$case</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$duration</td> </tr>"
+            row="<tr> <td style=\\\"text-align: left;\\\">$suite</td> <td style=\\\"text-align: left;\\\">$name</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$duration sec</td> </tr>"
 
             if [[ -z "$failure" ]]; then
               lists="$lists $row"
@@ -107,7 +107,7 @@ jobs:
           done
 
 
-          body="<table class=\\\"w3-table w3-striped w3-bordered\\\"> <tr>  <th>Suite</th> <th>Case</th> <th>Status</th> <th>Author</th> <th>Duration</th> </tr> $lists </table> <br /> The detail can be found here: <a> https://github.com/OfficeDev/TeamsFx/actions/runs/github.run_id</a>"
+          body="<table class=\\\"w3-table w3-striped w3-bordered\\\"> <tr>  <th>Suite</th> <th>Case</th> <th>Status</th> <th>Author</th> <th>Duration</th> </tr> $lists </table> <br /> The detail can be found here: <a> https://github.com/OfficeDev/TeamsFx/actions/runs/${{ github.run_id }}</a>"
 
           subject="SDK E2E Test Report ($passed/$total Passed)"
           if [ $failed -gt 0 ]; then
