--- a/packages/fx-core/src/common/samples-config.json
+++ b/packages/fx-core/src/common/samples-config.json
@@ -136,6 +136,20 @@
             "time": "5min to run",
             "configuration": "Ready for local debug",
             "suggested": false
+        },
+        {
+            "id": "bot-proactive-messaging-teamsfx",
+            "title": "Proactive Messaging",
+            "shortDescription": "This is a sample which shows how to save user's conversation reference information to send proactive reminder message using Bots.",
+            "fullDescription": "This is a sample which shows how to save user's conversation reference information to send proactive reminder message using Bots.",
+            "tags": [
+                "Bot" , "JS"
+            ],
+            "time": "5min to run",
+            "configuration": "Ready for local debug",
+            "suggested": false,
+            "url": "https://github.com/OfficeDev/Microsoft-Teams-Samples/tree/main/samples/",
+            "packageLink": "https://github.com/OfficeDev/Microsoft-Teams-Samples/archive/refs/heads/main.zip"
         }
     ]
 }
