chore(apicon): update code

--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
@@ -10,8 +10,7 @@ const teamsFx = new TeamsFx(IdentityType.App);
 // Initializes a new axios instance to call {{config.APIName}} API
 const appCredential = teamsFx.getCredential();
 const authProvider = new BearerTokenAuthProvider(
-  // please replace ‘<your-api-scope>’ with actual api scope value.
-  // You can visit https://aka.ms/teamsfx-connect-api to understand how to call your API with TeamsFx SDK.
+  // Please replace '<your-api-scope>' with actual api scope value.
   async () => await appCredential.getToken("<your-api-scope>")?.token
 );
 const {{config.APIName}}Client = createApiClient(teamsFx.getConfig("API_{{capitalName}}_ENDPOINT"), authProvider);
