--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
@@ -3,9 +3,9 @@ const teamsfxSdk = require("@microsoft/teamsfx");
 // Loads current app's configuration
 const teamsFx = new teamsfxSdk.TeamsFx(teamsfxSdk.IdentityType.App);
 // Initializes a new axios instance to call {{config.APIName}} API
+const appCredential = teamsFx.getCredential();
 const authProvider = new teamsfxSdk.BearerTokenAuthProvider(
-  // please replace ‘<your-api-scope>’ with actual api scope value.
-  // You can visit https://aka.ms/teamsfx-connect-api to understand how to call your API with TeamsFx SDK.
+  // Please replace '<your-api-scope>' with actual api scope value.
   async () => await appCredential.getToken("<your-api-scope>")?.token
 );
 const {{config.APIName}}Client = teamsfxSdk.createApiClient(teamsFx.getConfig("API_{{capitalName}}_ENDPOINT"), authProvider);
