--- a/templates/bot/ts/command-and-response/package.json
+++ b/templates/bot/ts/command-and-response/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon -e ts --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
     "build": "tsc --build",
     "start": "node ./lib/src/index.js",
-    "test": "npm run build && mocha --require ts-node/register \"tests/**/*.test.ts\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
   },
   "repository": {
@@ -29,14 +29,10 @@
     "restify": "^8.5.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.0",
     "@types/fs-extra": "^9.0.13",
-    "@types/mocha": "^9.1.0",
     "@types/node-cron": "^3.0.1",
     "@types/restify": "8.4.2",
-    "chai": "^4.3.6",
     "env-cmd": "^10.1.0",
-    "mocha": "^9.2.0",
     "nodemon": "^2.0.7",
     "shx": "^0.3.3",
     "ts-node": "~9.1.1",
