--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "0.13.0-rc.2",
+  "version": "0.13.0",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -109,8 +109,8 @@
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.1.1",
-    "@microsoft/teamsfx-api": "^0.17.2-rc.0",
-    "@microsoft/teamsfx-core": "^1.7.0-rc.2",
+    "@microsoft/teamsfx-api": "^0.17.2",
+    "@microsoft/teamsfx-core": "^1.7.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
