--- a/packages/fx-core/src/common/samples-config.json
+++ b/packages/fx-core/src/common/samples-config.json
@@ -140,7 +140,7 @@
         {
             "id": "bot-proactive-messaging-teamsfx",
             "title": "Proactive Messaging",
-            "shortDescription": "This is a sample which shows how to save user's conversation reference information to send proactive reminder message using Bots.",
+            "shortDescription": "Demonstrates how to send proactive messages to users.",
             "fullDescription": "This is a sample which shows how to save user's conversation reference information to send proactive reminder message using Bots.",
             "tags": [
                 "Bot" , "JS"
