chore(m365): add bot m365 template

--- a/templates/package.json
+++ b/templates/package.json
@@ -13,12 +13,14 @@
         "bot/csharp/default",
         "bot/js/command-and-response",
         "bot/js/default",
+        "bot/js/m365",
         "bot/js/notification-function-base",
         "bot/js/notification-restify",
         "bot/js/notification-trigger-http",
         "bot/js/notification-trigger-timer",
         "bot/ts/command-and-response",
         "bot/ts/default",
+        "bot/ts/m365",
         "bot/ts/notification-function-base",
         "bot/ts/notification-restify",
         "bot/ts/notification-trigger-http",
