--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/comment.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/comment.template
@@ -11,10 +11,16 @@ You can refer https://aka.ms/teamsfx-connect-api to learn more.
 Setting API configuration for cloud environment: 
 We have already set the configuration to .env.teamsfx.local based on your answers. 
 Before you deploy your code to cloud using TeamsFx, please follow https://aka.ms/teamsfx-add-appsettings to add following app settings with appropriate value to your Azure environment: 
-API_{{capitalName}}_ENDPOINT 
+TEAMSFX_API_{{capitalName}}_ENDPOINT
 {{#if (equals config.AuthConfig.AuthType "basic")}}
-API_{{capitalName}}_USERNAME 
-API_{{capitalName}}_PASSWORD 
+TEAMSFX_API_{{capitalName}}_USERNAME
+TEAMSFX_API_{{capitalName}}_PASSWORD
+{{else if (equals config.AuthConfig.AuthType "aad")}}
+    {{#if (equals config.AuthConfig.ReuseTeamsApp false)}}
+TEAMSFX_API_{{capitalName}}_TENANT_ID
+TEAMSFX_API_{{capitalName}}_CLIENT_ID
+TEAMSFX_API_{{capitalName}}_CLIENT_SECRET
+    {{/if}}
 {{/if}}
 
 You can refer https://aka.ms/teamsfx-connet-api to learn more. 
