--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
@@ -1,7 +1,15 @@
 const teamsfxSdk = require("@microsoft/teamsfx");
 
 // Loads current app's configuration
+{{#if (equals config.AuthConfig.ReuseTeamsApp true)}}
 const teamsFx = new teamsfxSdk.TeamsFx(teamsfxSdk.IdentityType.App);
+{{else}}
+const teamsFx = new teamsfxSdk.TeamsFx(teamsfxSdk.IdentityType.App, {
+  tenantId: process.env.TEAMSFX_API_{{capitalName}}_TENANT_ID,
+  clientId: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_ID,
+  clientSecret: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_SECRET,
+});
+{{/if}}
 // Initializes a new axios instance to call {{config.APIName}} API
 const appCredential = teamsFx.getCredential();
 const authProvider = new teamsfxSdk.BearerTokenAuthProvider(
