--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/aad.template
@@ -5,6 +5,7 @@ const teamsfxSdk = require("@microsoft/teamsfx");
 const teamsFx = new teamsfxSdk.TeamsFx(teamsfxSdk.IdentityType.App);
 {{else}}
 const teamsFx = new teamsfxSdk.TeamsFx(teamsfxSdk.IdentityType.App, {
+  authorityHost: "https://login.microsoftonline.com",
   tenantId: process.env.TEAMSFX_API_{{capitalName}}_TENANT_ID,
   clientId: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_ID,
   clientSecret: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_SECRET,
