--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
@@ -10,6 +10,7 @@ import {
 const teamsFx = new TeamsFx(IdentityType.App);
 {{else}}
 const teamsFx = new TeamsFx(IdentityType.App, {
+  authorityHost: "https://login.microsoftonline.com",
   tenantId: process.env.TEAMSFX_API_{{capitalName}}_TENANT_ID,
   clientId: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_ID,
   clientSecret: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_SECRET,
