--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
@@ -6,7 +6,17 @@ import {
 } from "@microsoft/teamsfx";
 
 // Loads current app's configuration and use app for auth.
+{{#if (equals config.AuthConfig.ReuseTeamsApp true)}}
 const teamsFx = new TeamsFx(IdentityType.App);
+{{else}}
+const teamsFx = new TeamsFx(IdentityType.App, {
+  // You can replace the default authorityHost url with actual value per your requirement
+  authorityHost: "https://login.microsoftonline.com",
+  tenantId: process.env.TEAMSFX_API_{{capitalName}}_TENANT_ID,
+  clientId: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_ID,
+  clientSecret: process.env.TEAMSFX_API_{{capitalName}}_CLIENT_SECRET,
+});
+{{/if}}
 // Initializes a new axios instance to call {{config.APIName}} API
 const appCredential = teamsFx.getCredential();
 const authProvider = new BearerTokenAuthProvider(
