--- a/templates/bot/js/default/package.json
+++ b/templates/bot/js/default/package.json
@@ -12,7 +12,8 @@
     "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
     "dev": "nodemon --inspect=9239 --signal SIGINT ./index.js",
     "start": "node ./index.js",
-    "watch": "nodemon ./index.js"
+    "watch": "nodemon ./index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@microsoft/adaptivecards-tools": "^0.1.2",
