--- a/templates/bot/js/notification-function-base/package.json
+++ b/templates/bot/js/notification-function-base/package.json
@@ -8,7 +8,8 @@
     "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
     "dev": "func start --javascript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
     "prepare-storage:teamsfx": "azurite --silent --location ./_storage_emulator --debug ./_storage_emulator/debug.log",
-    "start": "npx func start"
+    "start": "npx func start",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
