--- a/templates/bot/ts/notification-restify/package.json
+++ b/templates/bot/ts/notification-restify/package.json
@@ -10,7 +10,8 @@
     "dev": "nodemon -e ts --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
     "build": "tsc --build",
     "start": "node ./lib/src/index.js",
-    "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
+    "watch": "nodemon --watch ./src -e ts --exec \"npm run start\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
