perf(aad-manifest): allow user to config frontend and bot info (#4574)
* perf(aad-manifest): allow user to config frontend and bot info

* fix: update according to the comments

* perf: add check for user input

* test: fix and add test cases

* perf: update json schema for auth config

* perf: build and add missing file

* fix: update according to the comments

Co-authored-by: turenlong <rentu@microsoft.com>

--- a/packages/api/src/schemas/envConfig.json
+++ b/packages/api/src/schemas/envConfig.json
@@ -32,13 +32,30 @@
           "type": "string",
           "description": "The access_as_user scope id of existing AAD app for Teams app.",
           "minLength": 1
+        },
+        "frontendDomain": {
+          "type": "string",
+          "description": "The frontend domain for redirect URLs of existing AAD app for Teams app.",
+          "minLength": 1
+        },
+        "botId": {
+          "type": "string",
+          "description": "The bot id for identifier URIs of existing AAD app for Teams app.",
+          "minLength": 1
+        },
+        "botEndpoint": {
+          "type": "string",
+          "description": "The bot endpoint for redirect URLs of existing AAD app for Teams app.",
+          "minLength": 1
         }
       },
       "dependencies": {
         "clientId": ["clientSecret", "objectId", "accessAsUserScopeId"],
         "clientSecret": ["clientId", "objectId", "accessAsUserScopeId"],
         "objectId": ["clientId", "clientSecret", "accessAsUserScopeId"],
-        "accessAsUserScopeId": ["clientId", "clientSecret", "objectId"]
+        "accessAsUserScopeId": ["clientId", "clientSecret", "objectId"],
+        "botId": ["botEndpoint"],
+        "botEndpoint": ["botId"]
       }
     },
     "azure": {
